# praxis-kernel

./: .claudeignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.v1-backup  CONSTRAINTS.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  STATUS.md  STATUS_archive.md  TASKS.md  TASKS_v2_archive.md  claude-progress.txt  convergence.yaml  docker-compose.yml  feature_list.json  init.sh  install-system.sh  orchestrate.py  phases.json  praxis-system-prompt.md  pyproject.toml  run-project.sh  run_overnight.sh  run_session.py
.claude/: settings.json
.sdk/: orchestrate.py
praxis/: __main__.py  ambient.py  api.py  checkpoint.py  config_wizard.py  convergence.py  daemon.py  event_bus.py  hooks.py  hooks_engine.py  mcp_server.py  memory_store.py  modes.yaml  notifier.py  orchestrator.py  queue.py  queue_runner.py  scheduler.py  setup_wizard.py  slack_listener.py  subagents.py  tools.py  wiki.py
prompts/: coding-session.md
scripts/: validate_setup.py
systemd/: praxis.service
tests/: test_ambient.py  test_api.py  test_auth_rotation.py  test_checkpoint.py  test_cli_runtime.py  test_cloud_runtime.py  test_compaction.py  test_confidence.py  test_config_wizard.py  test_convergence.py  test_conversation_log.py  test_cost_circuit_breaker.py  test_daemon.py  test_enforcement.py  test_event_bus.py  test_file_watcher.py  test_heartbeat.py  test_hooks.py  test_integrations.py  test_local_runtime.py  test_main.py  test_mcp.py  test_memory_store.py  test_mode_enforcement.py  test_modes.py  test_notifier.py  test_openai_compaction.py  test_orchestrator.py  test_queue.py  (+20 more)
(+70 files in other folders)
