[project]
name = "praxis"
version = "0.1.0"
description = "Minimal orchestrator for the Praxis agentic OS"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
local = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
