[project]
name = "praxis"
version = "0.1.0"
description = "Minimal orchestrator for the Praxis agentic OS"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
local = [
    "openai>=1.0",
]
cloud = [
    "openai>=1.0",
]
analyze = [
    "coverage",
    "radon",
    "pylint",
    "pip-audit",
]
slack = [
    "slack_sdk>=3.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]
mcp = [
    "mcp>=1.0",
    "uvicorn>=0.20",
    "starlette>=0.27",
]
playwright = [
    "playwright>=1.40",
]
scheduler = [
    "croniter>=1.0",
]
dev = [
    "pytest>=8.0",
]
all = [
    "praxis[local]",
    "praxis[cloud]",
    "praxis[analyze]",
    "praxis[slack]",
    "praxis[mcp]",
    "praxis[playwright]",
    "praxis[scheduler]",
    "praxis[dev]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
